[package]
name = "ter"
version = "0.1.0"
edition = "2018"
authors = [
    "Christophe Yang",
    "Quentin Januel",
    "Sylvain Declercq",
]
license = "MIT"

[dependencies]
sat_portfolio = { git = "https://github.com/QuentinJanuel/sat-portfolio" }
lazy_static = "1.4.0"
lalrpop-util = "0.19.7"

[build-dependencies]
lalrpop = "0.19.7"
