[package]
name = "portsat"
version = "1.0.0"
edition = "2018"
authors = [
    "Quentin Januel (quentinjanuel.pro@gmail.com)",
    "Sylvain Declercq (syl.dec@live.fr)",
    "Christophe Yang (christopheyang@live.fr)",
    "",
    "Under the supervision of",
    "Jean-Guy Mailly (jean-guy.mailly@u-paris.fr)",
    "Jérôme Delobelle (jerome.delobelle@u-paris.fr)",
]
license = "MIT"

[dependencies]
sat_portfolio = { git = "https://github.com/QuentinJanuel/sat-portfolio" }
lazy_static = "1.4.0"
lalrpop-util = "0.19.7"

[build-dependencies]
lalrpop = "0.19.7"
